<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg">
    <TextView android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:textColor="@color/Grey"
        android:textSize="@dimen/font_size_large"
        android:text="@string/tv_title_bar_info_tip" 
        android:background="@drawable/tool_bar"/>
    
    <ScrollView 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" 
	    android:scrollbars="none" >
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:padding="10dp"
	    	android:orientation="vertical">
	    	
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center_horizontal"
		        android:textSize="@dimen/font_size_default"
		        android:textColor="@color/Grey"
		        android:text="@string/tv_cell_info_tip" />
		    
		    <TableLayout android:id="@+id/tl_loc_info_cell" 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:stretchColumns="0,2,4,6,8"  
			    android:shrinkColumns="1,2"
			    android:background="@drawable/round_corner_bg" >
			    
			    <TableRow
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:background="@color/DarkGrey" >
			        
			        <TextView            
			           	android:layout_width="0dp"
			       	    android:layout_weight="0.5"      
			            android:gravity="center"
			            android:ellipsize="end"
		        		android:singleLine="true"
			            android:textSize="@dimen/font_size_small"
			            android:textStyle="bold"
			            android:textColor="@color/Grey"
			            android:text="@string/tv_cell_type_tip" />
			        
			        <View 
			     	    android:layout_width="1dp"
			     	    android:layout_height="match_parent"
			     	    android:background="@color/Thistle" />
			        
			     	<TextView 
			     	    android:layout_width="0dp"
			       	    android:layout_weight="0.5"
			     	    android:gravity="center"
			     	    android:ellipsize="end"
		        		android:singleLine="true"
			     	    android:textSize="@dimen/font_size_small"
			     	    android:textStyle="bold"
			     	    android:textColor="@color/Grey"
			     	    android:text="@string/tv_cell_mcc_tip" />    
			       
			     	<View 
			     	    android:layout_width="1dp"
			     	    android:layout_height="match_parent"
			     	    android:background="@color/Thistle" />
			     	
			       	<TextView         
			       	    android:layout_width="0dp"
			       	    android:layout_weight="1"   
			     	    android:gravity="center"
			     	    android:ellipsize="end"
		        		android:singleLine="true"
			     	    android:textSize="@dimen/font_size_small"
			     	    android:textStyle="bold"
			     	    android:textColor="@color/Grey"
			     	    android:text="@string/tv_cell_mnc_tip" /> 
			     	    
			       	<View 
			     	    android:layout_width="1dp"
			     	    android:layout_height="match_parent"
			     	    android:background="@color/Thistle" />
			       	
			       	<TextView      
			       	    android:layout_width="0dp"
			       	    android:layout_weight="1"      
			     	    android:gravity="center"
			     	    android:ellipsize="end"
		        		android:singleLine="true"
			     	    android:textSize="@dimen/font_size_small"
			     	    android:textStyle="bold"
			     	    android:textColor="@color/Grey"
			     	    android:text="@string/tv_cell_cid_tip" /> 
			     	    
			       	<View 
			     	    android:layout_width="1dp"
			     	    android:layout_height="match_parent"
			     	    android:background="@color/Thistle" />
			       	
			       	<TextView             
			       	    android:layout_width="0dp"
			       	    android:layout_weight="1" 
			     	    android:gravity="center"
			     	    android:ellipsize="end"
		        		android:singleLine="true"
			     	    android:textSize="@dimen/font_size_small"
			     	    android:textStyle="bold"
			     	    android:textColor="@color/Grey"
			     	    android:text="@string/tv_cell_lac_tip" /> 
			     	    
			       	<View 
			     	    android:layout_width="1dp"
			     	    android:layout_height="match_parent"
			     	    android:background="@color/Thistle" />
			       	
			       	<TextView 
			       	    android:layout_width="0dp"
			       	    android:layout_weight="0.5"            
			     	    android:gravity="center"
			     	    android:ellipsize="end"
		        		android:singleLine="true"
			     	    android:textSize="@dimen/font_size_small"
			     	    android:textStyle="bold"
			     	    android:textColor="@color/Grey"
			     	    android:text="@string/tv_cell_asu_tip" /> 
			     	    
				</TableRow>
			</TableLayout>
		
		    <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:gravity="center_horizontal"
		        android:textSize="@dimen/font_size_default"
		        android:textColor="#000"
		        android:text="@string/tv_wifi_info_tip" />
		    
		    <TableLayout android:id="@+id/tl_loc_info_wifi" 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" 
		        android:stretchColumns="0,2,4,6,8"
		        android:background="@drawable/round_corner_bg"  >
			    
		        <TableRow
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:background="@color/DarkGrey" >
		            
			       	<TextView            
			       	    android:layout_width="0dp"
			       	    android:layout_weight="0.5"
			     	    android:gravity="center"
			     	    android:ellipsize="end"
		        		android:singleLine="true"
			     	    android:textSize="@dimen/font_size_small"
			     	    android:textStyle="bold"
			     	    android:textColor="@color/Grey"
			     	    android:text="@string/tv_wifi_ssid_tip" /> 
			     	    
			     	<View 
			     	    android:layout_width="1dp"
			     	    android:layout_height="match_parent"
			     	    android:background="@color/Thistle" />
			     	
			       	<TextView   
			       	    android:layout_width="0dp"
			       	    android:layout_weight="1"         
			     	    android:gravity="center"
			     	    android:ellipsize="end"
		        		android:singleLine="true"
			     	    android:textSize="@dimen/font_size_small"
			     	    android:textStyle="bold"
			     	    android:textColor="@color/Grey"
			     	    android:text="@string/tv_wifi_mac_tip" /> 
			     	    
			       	<View 
			     	    android:layout_width="1dp"
			     	    android:layout_height="match_parent"
			     	    android:background="@color/Thistle" />
			     	    
			       	<TextView
			       	    android:layout_width="0dp"
			       	    android:layout_weight="0.3"            
			     	    android:gravity="center"
			     	    android:ellipsize="end"
		        		android:singleLine="true"
			     	    android:textSize="@dimen/font_size_small"
			     	    android:textStyle="bold"
			     	    android:textColor="@color/Grey"
			     	    android:text="@string/tv_wifi_dbm_tip" /> 
			     	    
				</TableRow>
			</TableLayout>
			
		    <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:gravity="center_horizontal"
		        android:textSize="@dimen/font_size_default"
		        android:textColor="#000"
		        android:text="@string/tv_coord_info_tip" />
		    
		    <TableLayout android:id="@+id/tl_loc_info_coord" 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" 
		        android:stretchColumns="0,2,4,6"
		        android:background="@drawable/round_corner_bg"  >
			    
		        <TableRow
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:background="@color/DarkGrey" >        
			        
		            <TextView           
		                android:layout_width="0dp"
			       	    android:layout_weight="1"
			     	    android:gravity="center"
			     	    android:ellipsize="end"
		        		android:singleLine="true"
			     	    android:textSize="@dimen/font_size_small"
			     	    android:textStyle="bold"
			     	    android:textColor="@color/Grey"
			     	    android:text="@string/tv_coord_source_tip" /> 
			     	    
			     	<View 
			     	    android:layout_width="1dp"
			     	    android:layout_height="match_parent"
			     	    android:background="@color/Thistle" />
			     	
			       	<TextView          
			       	    android:layout_width="0dp"
			       	    android:layout_weight="1"
			     	    android:gravity="center"
			     	    android:ellipsize="end"
		        		android:singleLine="true"
			     	    android:textSize="@dimen/font_size_small"
			     	    android:textStyle="bold"
			     	    android:textColor="@color/Grey"
			     	    android:text="@string/tv_coord_lat_tip" /> 
			     	    
			     	<View 
			     	    android:layout_width="1dp"
			     	    android:layout_height="match_parent"
			     	    android:background="@color/Thistle" />
			     	
			       	<TextView     
			       	    android:layout_width="0dp"
			       	    android:layout_weight="1"      
			     	    android:gravity="center"
			     	    android:ellipsize="end"
		        		android:singleLine="true"
			     	    android:textSize="@dimen/font_size_small"
			     	    android:textStyle="bold"
			     	    android:textColor="@color/Grey"
			     	    android:text="@string/tv_coord_lng_tip" /> 
			     	    
			       	<View 
			     	    android:layout_width="1dp"
			     	    android:layout_height="match_parent"
			     	    android:background="@color/Thistle" />
			     	    
			       	<TextView    
			       	    android:layout_width="0dp"
			       	    android:layout_weight="0.7"        
			     	    android:gravity="center"
			     	    android:ellipsize="end"
		        		android:singleLine="true"
			     	    android:textSize="@dimen/font_size_small"
			     	    android:textStyle="bold"
			     	    android:textColor="@color/Grey"
			     	    android:text="@string/tv_coord_acc_tip" /> 
			     	    
			       	<View 
			     	    android:layout_width="1dp"
			     	    android:layout_height="match_parent"
			     	    android:background="@color/Thistle" />
			     	    
			       	<TextView    
			       	    android:layout_width="0dp"
			       	    android:layout_weight="1"        
			     	    android:gravity="center"
			     	    android:ellipsize="end"
		        		android:singleLine="true"
			     	    android:textSize="@dimen/font_size_small"
			     	    android:textStyle="bold"
			     	    android:textColor="@color/Grey"
			     	    android:text="@string/tv_coord_elapse_tip" /> 
			     	    
				</TableRow>
			</TableLayout>
			
		    <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:gravity="center_horizontal"
		        android:textSize="@dimen/font_size_default"
		        android:textColor="#000"
		        android:text="@string/tv_sys_info_tip" />
		    
		    <TableLayout android:id="@+id/tl_loc_info_sys" 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" 
		        android:stretchColumns="0,2,4,6,8"
		        android:background="@drawable/round_corner_bg" />
		    
	    </LinearLayout>
	</ScrollView>
    
</LinearLayout>